package com.airfranceklm.fasttrack.assignment.enums;

/**
 * Enum representing the possible statuses for a holiday.
 */
public enum HolidayStatus {
    DRAFT,
    REQUESTED,
    SCHEDULED,
    ARCHIVED
}
